# mlops-fraud-detection-repository

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.mlflow  Dockerfile.mlops  Dockerfile.streaming  docker-compose.yml  prompt_semilla.md  pyproject.toml  requirements-airflow.txt  requirements.txt  requirements_mlflow_clean.txt  requirements_mlops.txt
dags/: dag_inferencia_batch.py
model/: model_aml_xgboost.joblib  modelo_aml_dummy.joblib
src/: test_s3.py
src/api/: main.py  schemas.py
src/features/: transformers.py
src/models/: train_dummy.py
src/streaming/: consumer.py  producer.py
tests/: change_files_name.py
